# djorm-ext-pgfulltext

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Dockerfile  LICENSE  README.rst  docker-compose.yml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
djorm_pgfulltext/: __init__.py  fields.py  gis.py  models.py  utils.py
djorm_pgfulltext/management/commands/: update_search_field.py
djorm_pgfulltext/tests/: __init__.py  models.py
djorm_pgfulltext/tests/migrations/: 0001_initial.py  0001_initial.sql
djorm_pgfulltext/tests/sql/: person.postgresql_psycopg2.sql
testing/: runtests.py  settings.py
