[metadata]
name = djorm-ext-pgfulltext
version = 0.9.3
author = Lovely Team
author-email = engineering@livelovely.com
summary = PostgreSQL Full Text Search integration with django orm.
license = BSD
description-file = README.rst
home-page = https://github.com/linuxlewis/djorm-ext-pgfulltext
requires-python = >=2.7
classifier =
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Framework :: Django",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.2",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[wheel]
universal = 1
